<resources>
    <string name="app_name">AppGasEta</string>
    <string name="gasolina_x_etanol">Gasolina X Etanol</string>
    <string name="hint_gasolina">R$ Gasolina?</string>
    <string name="hint_etanol">R$ Etanol</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">RESULTADO</string>
    <string name="limpar">LIMPAR</string>
    <string name="salvar">SALVAR</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="qual_combust_vel_escolher">Qual combustível escolher?</string>
</resources>